--- a/.github/workflows/issue_comment.yml
+++ b/.github/workflows/issue_comment.yml
@@ -29,13 +29,29 @@ jobs:
           reactions: '+1'
   
   # using github api to create a comment, this is for the repo owned by organization
+  # comment-with-github-api:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: create comment with github API
+  #       run: |
+  #         gh api -X POST \
+  #           https://api.github.com/repo/${ORGANIZATION}/${REPOSITORY}/issues/${ISSUE_NUMBER}/comments \
+  #           -f body ='
+  #           comment but from the API call not action1
+  #           '
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #         ORGANIZATION: ${{ github.event.organization.login }}
+  #         REPOSITORY: ${{ github.event.repository.name }}
+  #         ISSUE_NUMBER: ${{ github.event.number }}
+    
   comment-with-github-api:
     runs-on: ubuntu-latest
     steps:
       - name: create comment with github API
         run: |
           gh api -X POST \
-            https://api.github.com/repo/${ORGANIZATION}/${REPOSITORY}/issues/${ISSUE_NUMBER}/comments \
+            https://api.github.com/repo/${REPOSITORY}/issues/${ISSUE_NUMBER}/comments \
             -f body ='
             comment but from the API call not action1
             '
@@ -43,8 +59,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           ORGANIZATION: ${{ github.event.organization.login }}
           REPOSITORY: ${{ github.event.repository.name }}
-          ISSUE_NUMBER: ${{ github.event.number }}
-    
+          ISSUE_NUMBER: ${{ github.event.number }}    
           
 
 
