--- a/.github/workflows/issue_comment.yml
+++ b/.github/workflows/issue_comment.yml
@@ -51,15 +51,15 @@ jobs:
       - name: create comment with github API
         run: |
           gh api -X POST \
-            https://api.github.com/repos/${REPOSITORY}/issues/${ISSUE_NUMBER}/comments  \
-            -f body ='
-            comment but from the API call not action1
+            https://api.github.com/repos/${ORGANIZATION}/${REPOSITORY}/issues/${ISSUE_NUMBER}/comments \
+            -f body='
+            Comment but from the API call not action
             '
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           ORGANIZATION: ${{ github.event.organization.login }}
           REPOSITORY: ${{ github.event.repository.name }}
-          ISSUE_NUMBER: ${{ github.event.issue.  number }}    
+          ISSUE_NUMBER: ${{ github.event.issue.number }}
           
 
 
