--- a/.github/workflows/issue_comment.yml
+++ b/.github/workflows/issue_comment.yml
@@ -1,57 +1,35 @@
-name: create a comment on new issues
+name: Create a comment on new issues
 
 on:
   issues:
-    types: [opened] # invoke this workflow when ever an issue has been opened/created
+    types: [opened]
 
 jobs:
   comment-with-action:
     runs-on: ubuntu-latest
-    # to create a comment with a issue requires: issueID
     steps:
       - name: "dump github context"
         run: echo '${{ toJSON(github.event) }}' | jq
         shell: bash
-        
-        
-        # using comment actions to add comment
-        # add a comment to an issue or pull request
       - name: Create comment
         uses: peter-evans/create-or-update-comment@v1
         with:
           issue-number: ${{ github.event.issue.number }}
           body: |
             This is a multi-line test comment
-            - With Git hub **MarkDown** :sparkles:
+            - With GitHub **Markdown** :sparkles:
             - Created by [create-or-update-comment][1]
-            
-            [1]: https:/google.com
+
+            [1]: https://github.com/peter-evans/create-or-update-comment
           reactions: '+1'
-  
-  # using github api to create a comment, this is for the repo owned by organization
-  # comment-with-github-api:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: create comment with github API
-  #       run: |
-  #         gh api -X POST \
-  #           https://api.github.com/repo/${ORGANIZATION}/${REPOSITORY}/issues/${ISSUE_NUMBER}/comments \
-  #           -f body ='
-  #           comment but from the API call not action1
-  #           '
-  #       env:
-  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  #         ORGANIZATION: ${{ github.event.organization.login }}
-  #         REPOSITORY: ${{ github.event.repository.name }}
-  #         ISSUE_NUMBER: ${{ github.event.number }}
-    
-  comment-with-github-api:
+          
+  comment-with-api:
     runs-on: ubuntu-latest
     steps:
-      - name: create comment with github API
+      - name: Create comment with API
         run: |
           gh api -X POST \
-            https://api.github.com/repo/${REPOSITORY}/issues/${ISSUE_NUMBER}/comments \
+            https://api.github.com/repos/${ORGANIZATION}/${REPOSITORY}/issues/${ISSUE_NUMBER}/comments \
             -f body='
             Comment but from the API call not action
             '
@@ -60,8 +38,3 @@ jobs:
           ORGANIZATION: ${{ github.event.organization.login }}
           REPOSITORY: ${{ github.event.repository.name }}
           ISSUE_NUMBER: ${{ github.event.issue.number }}
-          
-
-
-
-
