add brach for multi-repo

--- a/.github/workflows/checkout_multi_repo.yml
+++ b/.github/workflows/checkout_multi_repo.yml
@@ -23,6 +23,7 @@ jobs:
         with:
           repository: bruce1237/multi-repo
           path: ./multi-repo
+          ref: master
     
       - name: check files
         run: |
