--- a/.github/workflows/test-hashFiles.yml
+++ b/.github/workflows/test-hashFiles.yml
@@ -6,5 +6,7 @@ jobs:
    runs-on: ubuntu-latest
    steps:
      - uses: actions/checkout@v3
-     - run: |
+       
+     - name: get hashFiles
+       run: |
          echo "${{ hashFiles(./hashFilesTest/*.yml) }}"
