--- a/.github/workflows/test-hashFiles.yml
+++ b/.github/workflows/test-hashFiles.yml
@@ -8,5 +8,4 @@ jobs:
      - uses: actions/checkout@v3
        
      - name: get hashFiles
-       run: |
-         echo "${{ hashFiles(./hashFilesTest/*.yml) }}"
+       run: echo "${{ hashFiles(./hashFilesTest/*.yml) }}"
