--- a/.github/workflows/artifact-share-between-runner-jobs.yml
+++ b/.github/workflows/artifact-share-between-runner-jobs.yml
@@ -9,7 +9,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: generate file
-        runs: ls -lah >> abc.txt
+        run: ls -lah >> abc.txt
 
       - name: upload to artifact
         uses: actions/upload-artifact@v3
