--- a/.github/workflows/artifact-share-between-runner-jobs.yml
+++ b/.github/workflows/artifact-share-between-runner-jobs.yml
@@ -14,7 +14,7 @@ jobs:
       - name: upload to artifact
         uses: actions/upload-artifact@v3
         with:
-          file: abc.txt
+          name: abc.txt
           path: ./mine
 
   get-artifact:
@@ -23,7 +23,7 @@ jobs:
       - name: download artifact
         uses: actions/download-artifact@v3
         with:
-          file: ./mine/abc.txt
+          name: ./mine/abc.txt
 
       - name: output content 
         run: cat ./mine/abc.txt
