--- a/.github/workflows/artifact-share-between-runner-jobs.yml
+++ b/.github/workflows/artifact-share-between-runner-jobs.yml
@@ -9,7 +9,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: generate file
-        run: ls -lah >> abcd.txt
+        run: ls -lah >> ./abcd.txt
+
+      - name: check the file
+        run: cat ./abcd.txt
 
       - name: upload to artifact
         uses: actions/upload-artifact@v3
