--- a/.github/workflows/artifact-share-between-runner-jobs.yml
+++ b/.github/workflows/artifact-share-between-runner-jobs.yml
@@ -23,6 +23,7 @@ jobs:
 
   get-artifact:
     runs-on: ubuntu-latest
+    needs: [upload-to-artifact]
     steps:
       - name: download artifact
         uses: actions/download-artifact@v3
