--- a/.github/workflows/artifact-upload-docker-image.yml
+++ b/.github/workflows/artifact-upload-docker-image.yml
@@ -20,7 +20,7 @@ jobs:
        run: docker build -t my-test-image .
      
      - name: check if the image exist
-       run: docker push my-test-image
+       run: docker push ghcr.io/my-test-image
 
      - name: check image
        run: docker images
