--- a/.github/workflows/artifact-upload-docker-image.yml
+++ b/.github/workflows/artifact-upload-docker-image.yml
@@ -19,9 +19,28 @@ jobs:
      - name: build image
        run: docker build -t ghcr.io/${{ github.repository }} .
      
-     - name: check if the image exist
+     - name: push image
        run: docker push ghcr.io/${{ github.repository }}
 
      - name: check image
        run: docker images
-    
+  
+  pull-image:
+    runs-on: ubuntu-latest
+    steps:
+      - name: login to github container registry
+        uses: docker/login-action@v2
+        with: 
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: check image before pull
+        run: docker images
+
+      - name: pull image
+        run: docker pull ghcr.io/${{ github.repository }}
+
+      - name: check image after pull
+        run: docker images
+        
