--- a/.github/workflows/artifact-upload-docker-image.yml
+++ b/.github/workflows/artifact-upload-docker-image.yml
@@ -27,6 +27,7 @@ jobs:
   
   pull-image:
     runs-on: ubuntu-latest
+    needs: [build-upload-image]
     steps:
       - name: login to github container registry
         uses: docker/login-action@v2
