--- a/.github/workflows/artifact-upload-docker-image-copy.yml
+++ b/.github/workflows/artifact-upload-docker-image-copy.yml
@@ -45,3 +45,16 @@ jobs:
       - name: check image after pull
         run: docker images
         
+  remove-image:
+    runs-on: ubuntu-latest
+    needs: [build-upload-image,pull-image]
+    steps:
+      - name: login to github container registry
+        uses: docker/login-action@v2
+        with: 
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: remove image
+        run: docker image rm ghcr.io/${{ github.repository }}:${{ github.ref_name }}
