--- a/.github/workflows/artifact-upload-docker-image-copy.yml
+++ b/.github/workflows/artifact-upload-docker-image-copy.yml
@@ -3,47 +3,47 @@ on:
   workflow_dispatch:
     
 jobs:
-  build-upload-image:
-   runs-on: ubuntu-latest
-   steps:
-     - name: checkout
-       uses: actions/checkout@v3
+  # build-upload-image:
+  #  runs-on: ubuntu-latest
+  #  steps:
+  #    - name: checkout
+  #      uses: actions/checkout@v3
 
-     - name: login to github container registry
-       uses: docker/login-action@v2
-       with: 
-         registry: ghcr.io
-         username: ${{ github.actor }}
-         password: ${{ secrets.GITHUB_TOKEN }}
+  #    - name: login to github container registry
+  #      uses: docker/login-action@v2
+  #      with: 
+  #        registry: ghcr.io
+  #        username: ${{ github.actor }}
+  #        password: ${{ secrets.GITHUB_TOKEN }}
 
-     - name: build image
-       run: docker build -t ghcr.io/${{ github.repository }}:${{ github.ref_name}} .
+  #    - name: build image
+  #      run: docker build -t ghcr.io/${{ github.repository }}:${{ github.ref_name}} .
      
-     - name: push image
-       run: docker push ghcr.io/${{ github.repository }}:${{ github.ref_name}}
+  #    - name: push image
+  #      run: docker push ghcr.io/${{ github.repository }}:${{ github.ref_name}}
 
-     - name: check image
-       run: docker images
+  #    - name: check image
+  #      run: docker images
   
-  pull-image:
-    runs-on: ubuntu-latest
-    needs: [build-upload-image]
-    steps:
-      - name: login to github container registry
-        uses: docker/login-action@v2
-        with: 
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+  # pull-image:
+  #   runs-on: ubuntu-latest
+  #   needs: [build-upload-image]
+  #   steps:
+  #     - name: login to github container registry
+  #       uses: docker/login-action@v2
+  #       with: 
+  #         registry: ghcr.io
+  #         username: ${{ github.actor }}
+  #         password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: check image before pull
-        run: docker images
+  #     - name: check image before pull
+  #       run: docker images
 
-      - name: pull image
-        run: docker pull ghcr.io/${{ github.repository }}:${{ github.ref_name }}
+  #     - name: pull image
+  #       run: docker pull ghcr.io/${{ github.repository }}:${{ github.ref_name }}
 
-      - name: check image after pull
-        run: docker images
+  #     - name: check image after pull
+  #       run: docker images
         
   remove-image:
     runs-on: ubuntu-latest
@@ -64,5 +64,5 @@ jobs:
           with:
             package-name: ${{ github.repository }}
             package-type: 'container'
-            package-version-ids: ${{ github.ref_name }}
+
 
