--- a/.github/workflows/delete-package.yml
+++ b/.github/workflows/delete-package.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/delete-package-versions@v4
         with:
           owner: 'github'
-          package-name: ${{ github.repository }}
+          package-name: github-action-workflow-hero #${{ github.repository }}
           package-type: 'container'
 
 
