--- a/.github/workflows/delete-package.yml
+++ b/.github/workflows/delete-package.yml
@@ -15,5 +15,6 @@ jobs:
           owner: 'github'
           package-name: github-action-workflow-hero #${{ github.repository }}
           package-type: 'container'
+          package-version-ids: '965fbcae990b0467ed5657caceaec165018ef44a4d2d46c7cdea80a9dff0d1ea'
 
 
