--- a/.github/workflows/artifact-upload-docker-image.yml
+++ b/.github/workflows/artifact-upload-docker-image.yml
@@ -1,6 +1,9 @@
 name: artifact-upload-docker-image
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - main
     
 jobs:
   build-upload-image:
