--- a/.github/workflows/delete-package.yml
+++ b/.github/workflows/delete-package.yml
@@ -11,10 +11,15 @@ jobs:
         uses: bruce1237/github-workflow-center/.github/actions/dash-branch-name@main
         with:
           branch-name: ${{ github.event.ref }}
+
+      - name: check dash-name
+        run: echo ${{ env.branch_name }}
       
       - name: dash branch name without default
         uses: bruce1237/github-workflow-center/.github/actions/dash-branch-name@main
-        
+
+      - name: check dash-name
+        run: echo ${{ env.branch_name }}  
 
       - name: get package version id
         uses: bruce1237/github-workflow-center/.github/actions/package-version-id@main
