--- a/.github/workflows/delete-package.yml
+++ b/.github/workflows/delete-package.yml
@@ -12,7 +12,9 @@ jobs:
       - name: tyr
         run:
           echo ${GITHUB_REF#refs/heads/}
-          echo ${GITHUB_REF_NAME}
+          
+      - name: ttt
+        run: echo ${GITHUB_REF_NAME}
       
       - name: dash branch name
         uses: bruce1237/github-workflow-center/.github/actions/dash-branch-name@main
