--- a/.github/actions/uppercase-repo-name/action.yml
+++ b/.github/actions/uppercase-repo-name/action.yml
@@ -8,5 +8,5 @@ runs:
       run: echo "repo=${GITHUB_REPOSITORY,^^}" >> $GITHUB_ENV
       shell: bash
 
-    - name: using dash-name
-      uses: bruce1237/github-workflow-center/.github/actions/dash-branch-name@main
+    # - name: using dash-name
+    #   uses: bruce1237/github-workflow-center/.github/actions/dash-branch-name@main
