--- a/.github/workflows/using-composite-action.yml
+++ b/.github/workflows/using-composite-action.yml
@@ -7,6 +7,9 @@ jobs:
    steps:
      - uses: actions/checkout@v3
        
+     - name: check before
+       run: echo ${{ env.branch_name }}
+       
      - name: run the composite action
        uses: ./.github/actions/uppercase-repo-name
 
