--- a/.github/actions/uppercase-repo-name/action.yml
+++ b/.github/actions/uppercase-repo-name/action.yml
@@ -9,4 +9,5 @@ runs:
       shell: bash
 
     - name: using dash-name
+      if: env.ref_name == ""
       uses: bruce1237/github-workflow-center/.github/actions/dash-branch-name@main
