--- a/.github/workflows/publish-image.yml
+++ b/.github/workflows/publish-image.yml
@@ -13,11 +13,9 @@ jobs:
         uses: bruce1237/github-workflow-center/.github/actions/dash-branch-name@main
 
       - name: login to github container registry
-        uses: docker/login-action@v2
-        with: 
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+        uses: bruce1237/github-workflow-center/.github/actions/docker-login@main
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: build image
         run: docker build docker_build_files/ -t ghcr.io/${{ github.repository }}:${{ env.branch_name }}
