--- a/.github/workflows/clair-scan.yml
+++ b/.github/workflows/clair-scan.yml
@@ -14,6 +14,8 @@ jobs:
    steps:
       - name: docker login
         uses: bruce1237/github-workflow-center/.github/actions/docker-login@main
+        with:
+          github_token: ${{ github.TOKEN }}
       
       - name: pull the image
         run: docker pull ghcr.io/${{ github.repository }}:${{ env.branch_name }}
