--- a/.github/workflows/clair-scan.yml
+++ b/.github/workflows/clair-scan.yml
@@ -29,5 +29,10 @@ jobs:
         run: |
           cp ./example-run.sh clair-scanner
           chmod +x clair-scanner
-          ./clair-scanner ${{ github.repository }}:${{ env.branch_name }}
+      
+      - name: check files
+        run: ls -lah
+
+      - name: run scan
+        run: ./clair-scanner ${{ github.repository }}:${{ env.branch_name }}
     
