--- a/.github/workflows/clair-scan.yml
+++ b/.github/workflows/clair-scan.yml
@@ -39,5 +39,7 @@ jobs:
 
 
       - name: run scan
-        run: ./clair-scanner ghcr.io/${{ github.repository }}:${{ github.ref_name }}
-    
+        run: ./clair-scanner -l result.log ghcr.io/${{ github.repository }}:${{ github.ref_name }}
+
+      - name: check log file
+        run: cat result.log
