--- a/.github/workflows/clair-scan.yml
+++ b/.github/workflows/clair-scan.yml
@@ -39,7 +39,9 @@ jobs:
 
 
       - name: run scan
-        run: ./clair-scanner -l result.log ghcr.io/${{ github.repository }}:${{ github.ref_name }}
+        run: |
+          touch clair-whitelist.yml
+          ./clair-scanner -r report.json -l result.log -w clair-whitelist.yml ghcr.io/${{ github.repository }}:${{ github.ref_name }}
 
       - name: check log file
         run: cat result.log
