--- a/.github/workflows/clair-scan.yml
+++ b/.github/workflows/clair-scan.yml
@@ -41,7 +41,8 @@ jobs:
       - name: run scan
         run: |
           touch clair-whitelist.yml
-          ./clair-scanner -r report.json -l result.log -w clair-whitelist.yml ghcr.io/${{ github.repository }}:${{ github.ref_name }}
+          # ./clair-scanner -r report.json -l result.log -w clair-whitelist.yml ghcr.io/${{ github.repository }}:${{ github.ref_name }}
+          ./clair-scanner ghcr.io/${{ github.repository }}:${{ github.ref_name }} -r report.json
 
       - name: check log file
         run: cat result.log
