--- a/.github/workflows/action-input-output.yml
+++ b/.github/workflows/action-input-output.yml
@@ -6,4 +6,4 @@ jobs:
   action-in-out-put:
    uses: bruce1237/github-workflow-center/.github/workflows/input-output.yml@main
    with:
-    input_var: ${{ github.ref_name }}
+    input_var: 'calling from hero'
