--- a/.github/workflows/action-input-output.yml
+++ b/.github/workflows/action-input-output.yml
@@ -3,6 +3,13 @@ on:
   workflow_dispatch:
     
 jobs:
+  check-ref:
+    runs-on: ubuntu-latest
+    steps:
+      - name: check ref name
+        run: |
+          echo ${{ github.ref_name }}
+          echo ${ GITHUB_REF_NAME }
   action-in-out-put:
    uses: bruce1237/github-workflow-center/.github/workflows/input-output.yml@main
    with:
