--- a/.github/workflows/action-input-output.yml
+++ b/.github/workflows/action-input-output.yml
@@ -9,7 +9,7 @@ jobs:
       - name: check ref name
         run: |
           echo ${{ github.ref_name }}
-          echo ${ GITHUB_REF_NAME }
+          echo ${{ GITHUB_REF_NAME }}
   action-in-out-put:
    uses: bruce1237/github-workflow-center/.github/workflows/input-output.yml@main
    with:
