--- a/.github/workflows/clair-scan.yml
+++ b/.github/workflows/clair-scan.yml
@@ -11,6 +11,10 @@ on:
 jobs:
   clair-scan:
     uses: bruce1237/github-workflow-center/.github/workflows/clair-scan.yml@main
+    with:
+      github_token: ${{ github.TOKEN }}
+      image_name: ${{ github.repository }}
+      image_tag: ${{ github.ref_name }}
 
 
   clair-scan-local:
