--- a/.github/workflows/clair-scan.yml
+++ b/.github/workflows/clair-scan.yml
@@ -12,6 +12,6 @@ jobs:
   clair-scan:
     uses: bruce1237/github-workflow-center/.github/workflows/clair-scan.yml@main
     with:
-      github_pass: ${{ github.TOKEN }}
+      github_token: ${{ secrets.GITHUB_TOKEN }}
       image_name: ${{ github.repository }}
       image_tag: ${{ github.ref_name }}
