--- a/.github/workflows/share-image-between-runners.yml
+++ b/.github/workflows/share-image-between-runners.yml
@@ -8,6 +8,9 @@ jobs:
    steps:
       - name: checkout
         uses: actions/checkout@v3
+
+      - name: check image
+        run: docker images
       
       - name: set up docker buildx
         uses: docker/setup-buildx-action@v2
@@ -26,7 +29,7 @@ jobs:
           path: /tmp/myimage.tar
       
       - name: check image
-        run: docker image ls -a
+        run: docker images
 
   get-image:
     runs-on: ubuntu-latest
@@ -41,11 +44,14 @@ jobs:
           name: myimage
           path: /tmp
       
+      - name: check image
+        run: docker images
+
       - name: load image
         run: docker load --input /tmp/myimage.tar
       
       - name: check image
-        run: docker image ls -a
+        run: docker images
         
 
     
