--- a/.github/workflows/share-image-between-runners.yml
+++ b/.github/workflows/share-image-between-runners.yml
@@ -10,7 +10,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: check image
-        run: docker images
+        run: docker image ls -a
       
       - name: set up docker buildx
         uses: docker/setup-buildx-action@v2
@@ -20,7 +20,7 @@ jobs:
         with:
           context: .
           file: ./docker_build_files/Dockerfile
-          tags: myimage:v1.0
+          tags: myimage:latest
           outputs: type=docker,dest=/tmp/myimage.tar
 
       - name: upload artifact
@@ -30,12 +30,15 @@ jobs:
           path: /tmp/myimage.tar
       
       - name: check image
-        run: docker images
+        run: docker image ls -a
 
   get-image:
     runs-on: ubuntu-latest
     needs: create-image
     steps:
+      - name: check image
+        run: docker image ls -a
+        
       - name: set up docker buildx
         uses: docker/setup-buildx-action@v2
 
@@ -46,13 +49,13 @@ jobs:
           path: /tmp
       
       - name: check image
-        run: docker images
+        run: docker image ls -a
 
       - name: load image
         run: docker load --input /tmp/myimage.tar
       
       - name: check image
-        run: docker images
+        run: docker image ls -a
         
 
     
