--- a/.github/workflows/action-input-output.yml
+++ b/.github/workflows/action-input-output.yml
@@ -16,7 +16,7 @@ jobs:
           echo ${{ github.ref_name }}
           echo ${GITHUB_REF_NAME }
   action-in-out-put:
-   uses: bruce1237/github-workflow-center/.github/workflows/input-output.yml@${{inputs.branch_name}}
+   uses: bruce1237/github-workflow-center/.github/workflows/input-output.yml@myTest
    with:
     input_var: ${{ github.ref_name }}
     branch_name: ${{inputs.branch_name}}
